fix minor fixation in the modal padding on the message and ccenter align the warning message and just did a two bug that just found on release testing

--- a/src/assets/scss/paper-dashboard/react/custom/_sidebar-and-main-panel.scss
+++ b/src/assets/scss/paper-dashboard/react/custom/_sidebar-and-main-panel.scss
@@ -1013,8 +1013,8 @@ button.p-button.p-component.p-button-icon-only.p-button-text.p-button-rounded.p-
   font-size: 0.9rem !important;
 }
 .sweet-title-padding {
-  padding-left: 16%;
-  padding-right: 70px;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 .sweet-alert-sure {
@@ -1090,7 +1090,7 @@ button.p-button.p-component.p-button-icon-only.p-button-text.p-button-rounded.p-
 .warning-alert {
   font-size: 12px !important;
   font-weight: 600 !important;
-  padding: 0px 66px 0px 85px;
+  padding: 0px 20px 0px 20px;
 
   display: flex; /* Use flexbox for alignment */
   line-height: 1.5;
